Ajout Test LectureService